// <auto-generated />
using System;
using CityOS.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace CityOS.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20251201212642_Update")]
    partial class Update
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.0")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("CityOS.Models.Budget", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("CityId")
                        .HasColumnType("integer")
                        .HasColumnName("city_id");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp")
                        .HasColumnName("created_at");

                    b.Property<string>("Name")
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("name");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("timestamp")
                        .HasColumnName("updated_at");

                    b.Property<int>("Year")
                        .HasColumnType("integer")
                        .HasColumnName("year");

                    b.HasKey("Id");

                    b.HasIndex(new[] { "CityId", "Year" }, "ux_budget_city_year")
                        .IsUnique();

                    b.ToTable("budget");
                });

            modelBuilder.Entity("CityOS.Models.BudgetRevision", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("BudgetId")
                        .HasColumnType("integer")
                        .HasColumnName("budget_id");

                    b.Property<string>("Name")
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("name");

                    b.Property<DateTime?>("RevisionDate")
                        .HasColumnType("date")
                        .HasColumnName("revision_date");

                    b.HasKey("Id");

                    b.HasIndex("BudgetId");

                    b.ToTable("budget_revision");
                });

            modelBuilder.Entity("CityOS.Models.City", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Code")
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("code");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("name");

                    b.HasKey("Id");

                    b.ToTable("city");
                });

            modelBuilder.Entity("CityOS.Models.DataSource", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("CityId")
                        .HasColumnType("integer")
                        .HasColumnName("city_id");

                    b.Property<string>("DatasetKind")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("dataset_kind");

                    b.Property<string>("Description")
                        .HasColumnType("text")
                        .HasColumnName("description");

                    b.Property<string>("FileType")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("character varying(10)")
                        .HasColumnName("file_type");

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_active");

                    b.Property<string>("LastChecksum")
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("last_checksum");

                    b.Property<DateTime?>("LastLoadedAt")
                        .HasColumnType("timestamp")
                        .HasColumnName("last_loaded_at");

                    b.Property<string>("SourceUrl")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("source_url");

                    b.HasKey("Id");

                    b.HasIndex("CityId");

                    b.ToTable("data_source");
                });

            modelBuilder.Entity("CityOS.Models.IncomeExecution", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp")
                        .HasColumnName("created_at");

                    b.Property<decimal?>("ExecutionPercent")
                        .HasColumnType("decimal(7,4)")
                        .HasColumnName("execution_percent");

                    b.Property<int>("IncomeSourceId")
                        .HasColumnType("integer")
                        .HasColumnName("income_source_id");

                    b.Property<DateTime>("ReportPeriod")
                        .HasColumnType("date")
                        .HasColumnName("report_period");

                    b.Property<int>("RevisionId")
                        .HasColumnType("integer")
                        .HasColumnName("revision_id");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("timestamp")
                        .HasColumnName("updated_at");

                    b.Property<decimal>("Value")
                        .HasColumnType("decimal(18,2)")
                        .HasColumnName("value");

                    b.HasKey("Id");

                    b.HasIndex("IncomeSourceId");

                    b.HasIndex(new[] { "RevisionId", "IncomeSourceId", "ReportPeriod" }, "ux_execution_revision_source_period")
                        .IsUnique();

                    b.ToTable("income_execution");
                });

            modelBuilder.Entity("CityOS.Models.IncomePlan", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp")
                        .HasColumnName("created_at");

                    b.Property<int>("IncomeSourceId")
                        .HasColumnType("integer")
                        .HasColumnName("income_source_id");

                    b.Property<int>("RevisionId")
                        .HasColumnType("integer")
                        .HasColumnName("revision_id");

                    b.Property<decimal?>("SharePercent")
                        .HasColumnType("decimal(7,4)")
                        .HasColumnName("share_percent");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("timestamp")
                        .HasColumnName("updated_at");

                    b.Property<decimal>("Value")
                        .HasColumnType("decimal(18,2)")
                        .HasColumnName("value");

                    b.HasKey("Id");

                    b.HasIndex("IncomeSourceId");

                    b.HasIndex(new[] { "RevisionId", "IncomeSourceId" }, "ux_budget_income_revision_source")
                        .IsUnique();

                    b.ToTable("income_plan");
                });

            modelBuilder.Entity("CityOS.Models.IncomeSource", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Description")
                        .HasColumnType("text")
                        .HasColumnName("description");

                    b.Property<string>("ExternalCode")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("external_code");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("name");

                    b.HasKey("Id");

                    b.ToTable("income_source");
                });

            modelBuilder.Entity("CityOS.Models.Budget", b =>
                {
                    b.HasOne("CityOS.Models.City", "City")
                        .WithMany("Budgets")
                        .HasForeignKey("CityId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("City");
                });

            modelBuilder.Entity("CityOS.Models.BudgetRevision", b =>
                {
                    b.HasOne("CityOS.Models.Budget", "Budget")
                        .WithMany("BudgetRevisions")
                        .HasForeignKey("BudgetId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Budget");
                });

            modelBuilder.Entity("CityOS.Models.DataSource", b =>
                {
                    b.HasOne("CityOS.Models.City", "City")
                        .WithMany("DataSources")
                        .HasForeignKey("CityId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("City");
                });

            modelBuilder.Entity("CityOS.Models.IncomeExecution", b =>
                {
                    b.HasOne("CityOS.Models.IncomeSource", "IncomeSource")
                        .WithMany("IncomeExecutions")
                        .HasForeignKey("IncomeSourceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("CityOS.Models.BudgetRevision", "BudgetRevision")
                        .WithMany("IncomeExecutions")
                        .HasForeignKey("RevisionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("BudgetRevision");

                    b.Navigation("IncomeSource");
                });

            modelBuilder.Entity("CityOS.Models.IncomePlan", b =>
                {
                    b.HasOne("CityOS.Models.IncomeSource", "IncomeSource")
                        .WithMany("IncomePlans")
                        .HasForeignKey("IncomeSourceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("CityOS.Models.BudgetRevision", "BudgetRevision")
                        .WithMany("IncomePlans")
                        .HasForeignKey("RevisionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("BudgetRevision");

                    b.Navigation("IncomeSource");
                });

            modelBuilder.Entity("CityOS.Models.Budget", b =>
                {
                    b.Navigation("BudgetRevisions");
                });

            modelBuilder.Entity("CityOS.Models.BudgetRevision", b =>
                {
                    b.Navigation("IncomeExecutions");

                    b.Navigation("IncomePlans");
                });

            modelBuilder.Entity("CityOS.Models.City", b =>
                {
                    b.Navigation("Budgets");

                    b.Navigation("DataSources");
                });

            modelBuilder.Entity("CityOS.Models.IncomeSource", b =>
                {
                    b.Navigation("IncomeExecutions");

                    b.Navigation("IncomePlans");
                });
#pragma warning restore 612, 618
        }
    }
}
